--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,9 @@
 .home {
   justify-content: center;
   padding: 1rem;
+  margin-top: 40px;
+
+  justify-content: center;
 }
 
 .home__title {
@@ -81,7 +84,6 @@
     display: block;
     font-weight: bold;
     cursor: pointer;
-
     font-weight: 700;
   }
   a {
